# ChangeLog for media-libs/freetype
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/freetype/ChangeLog,v 1.187 2008/06/20 10:11:02 pva Exp $

*freetype-2.3.6-r1 (20 Jun 2008)

  20 Jun 2008; Peter Volkov <pva@gentoo.org>
  +files/freetype-2.3.6-incorect-font-scaling.patch,
  +freetype-2.3.6-r1.ebuild:
  Fix incorrent size of rendered fonts, bug #228095, thank Jacob for report
  and Werner Lemberg for the fix.

  13 Jun 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  freetype-2.3.6.ebuild:
  ppc stable, bug #225851

  12 Jun 2008; Jeroen Roovers <jer@gentoo.org> freetype-2.3.6.ebuild:
  Stable for HPPA (bug #225851).

  11 Jun 2008; Brent Baude <ranger@gentoo.org> freetype-2.3.6.ebuild:
  Marking freetype-2.3.6 ppc64 for bug 225851

  11 Jun 2008; Steve Dibb <beandog@gentoo.org> freetype-2.3.6.ebuild:
  amd64 stable, bug 225851

  11 Jun 2008; Raúl Porcel <armin76@gentoo.org> freetype-2.3.6.ebuild:
  alpha/ia64 stable wrt #225851

  11 Jun 2008; Friedrich Oslage <bluebird@gentoo.org> freetype-2.3.6.ebuild:
  stable on sparc, security bug #225851

  11 Jun 2008; Christian Faulhammer <opfer@gentoo.org>
  freetype-2.3.6.ebuild:
  stable x86, security bug 225851

  11 Jun 2008; Ryan Hill <dirtyepic@gentoo.org> metadata.xml:
  Add myself to metadata.xml as co-maintainer.

*freetype-2.3.6 (11 Jun 2008)

  11 Jun 2008; Ryan Hill <dirtyepic@gentoo.org> +freetype-2.3.6.ebuild:
  Version bump.

  29 Apr 2008; Brent Baude <ranger@gentoo.org>
  freetype-1.4_pre20080316.ebuild:
  stable ppc, bug 219421

  28 Apr 2008; Raúl Porcel <armin76@gentoo.org>
  freetype-1.4_pre20080316.ebuild:
  alpha/ia64 stable wrt #219421

  28 Apr 2008; Jeroen Roovers <jer@gentoo.org>
  freetype-1.4_pre20080316.ebuild:
  Stable for HPPA (bug #219421).

  27 Apr 2008; Markus Meier <maekke@gentoo.org>
  freetype-1.4_pre20080316.ebuild:
  amd64/x86 stable, bug #219421

  27 Apr 2008; Ferris McCormick <fmccor@gentoo.org>